# top-coder-agent-skills

./: .gitignore  Makefile  README.md  pyproject.toml
.agents/skills/top-coder-meta-skill/: SKILL.md
docs/: PUBLISHING.md
skills/: ARCHITECTURE.md
skills/chain-of-responsibility-go/: SKILL.md
skills/chain-of-responsibility-nodejs/: SKILL.md
skills/chain-of-responsibility-python/: SKILL.md
skills/chain-of-responsibility-react/: SKILL.md
skills/debugger-nodejs/: SKILL.md
skills/debugger-nodejs/scripts/: debug.py  init.py
skills/debugger-python/: SKILL.md
skills/debugger-python/scripts/: debug.py
skills/meta-skill/: SKILL.md
skills/pipeline-pattern-go/: SKILL.md
skills/pipeline-pattern-nodejs/: SKILL.md
skills/pipeline-pattern-python/: SKILL.md
skills/pipeline-pattern-react/: SKILL.md
skills/strategy-pattern-go/: SKILL.md
skills/strategy-pattern-nodejs/: SKILL.md
skills/strategy-pattern-python/: SKILL.md
skills/strategy-pattern-react/: SKILL.md
skills/top-coder-meta-skill/: SKILL.md
