[project]
name = "top-coder-agent-skills"
version = "0.1.0"
description = "Agent skills and debugging tools for AI coding assistants"
requires-python = ">=3.11"
dependencies = [
    "top-coder-ai-skills-debugger",
    "debugger-mcp",
]

[tool.uv.sources]
top-coder-ai-skills-debugger = { workspace = true }
debugger-mcp = { workspace = true }

[tool.uv.workspace]
members = ["packages/debugger-core", "packages/debugger-mcp"]
